--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -28,3 +28,26 @@
 #     container_name: redis
 #     ports:
 #     - 6379:6379
+
+
+version: '3.8'
+
+services:
+  mysql:
+    image: mysql:8.0 # You can use any MySQL version
+    container_name: mysql-container
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234  # Set root password
+    ports:
+      - "3306:3306"  # Expose MySQL on port 3306
+    volumes:
+      - mysql-data:/var/lib/mysql  # Persist MySQL data
+    networks:
+      - mysql-network
+
+volumes:
+  mysql-data:  # This will store the data persistently
+
+networks:
+  mysql-network:
+    driver: bridge
