add registry-service as a module in pom

--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -33,7 +33,7 @@
 		<!-- <module>notification-service</module> -->
 		<!-- <module>profile-service</module> -->
 		<!-- <module>progress-service</module> -->
-		<!-- <module>registry-service</module> -->
+		<module>registry-service</module>
 		<!-- <module>reward-service</module> -->
 	</modules>
 
