--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -27,7 +27,6 @@
 
 	<modules>
 		<module>registry-service</module>
-		<module>config-service</module>
 	</modules>
 
 	<dependencies>
@@ -110,6 +109,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<skip>
+						true
+					</skip>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
