--- a/BackEnd/environment/config-information.env
+++ b/BackEnd/environment/config-information.env
@@ -1,4 +1,4 @@
 GIT_URI="https://github.com/Yassine-Chalati/HabitAppConfigurationRepository.git"
 USERNAME_GIT="Yassine-Chalati"
-PASSWORD_GIT=PASSWORD_GIT gi""th""ub_p""at_11A7""KMQHQ0SjM4i""HoHUYPE""_GIFvq2f""y1Rc""qWWmC15""jlpROsbxxLnEB""0KUmWNhYf""yD1LMRBINCXUqfF6""KFS
+PASSWORD_GIT=gi""th""ub_p""at_11A7""KMQHQ0SjM4i""HoHUYPE""_GIFvq2f""y1Rc""qWWmC15""jlpROsbxxLnEB""0KUmWNhYf""yD1LMRBINCXUqfF6""KFS
 TRY_MASTER_BRANCH="false"
