--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -66,6 +66,8 @@ services:
       dockerfile: Dockerfile
       args:
         - JAR_FILE=config-service-0.0.1-SNAPSHOT.jar
+    depends_on:
+      - registry-service
     image: config-service
     container_name: config-service
     env_file:
@@ -75,6 +77,24 @@ services:
       - 8001:8001
     networks:
       - habit-app
+
+  gateway-service:
+    build:
+      context: ./gateway-service
+      dockerfile: Dockerfile
+      args:
+        - JAR_FILE=gateway-service-0.0.1-SNAPSHOT.jar
+    depends_on:
+      - config-service
+    image: gateway-service
+    container_name: gateway-service
+    env_file:
+      - ./environment/registry-information.env
+    ports:
+      - 8002:8002
+    networks:
+      - habit-app
+
 
 volumes:
   mysql-data:
