--- a/BackEnd/habit-service/src/main/resources/bootstrap.yml
+++ b/BackEnd/habit-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: habit-service
   profiles:
-    active: ${PROFILES},
+    active: ${PROFILES}
   cloud:
     config:
       discovery:
@@ -21,18 +21,3 @@ eureka:
       enable: false
     service-url:
       defaultZone: ${HTTP}://${BASIC_AUTH_EUREKA}${DNS}/eureka/
-
-
-
-  datasource:
-    url: jdbc:mysql://localhost:3306/base
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
