--- a/BackEnd/habit-service/src/main/resources/bootstrap.yml
+++ b/BackEnd/habit-service/src/main/resources/bootstrap.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: habit-service
   profiles:
-    active: ${PROFILES}
+    active: ${PROFILES}, test
   cloud:
     config:
       discovery:
         enabled: true
         serviceId: config-service
-      fail-fast: true
+      fail-fast: false
       retry:
         max-attempts: 10
       label: ${GIT_BRANCH}
@@ -21,3 +21,25 @@ eureka:
       enable: false
     service-url:
       defaultZone: ${HTTP}://${BASIC_AUTH_EUREKA}${DNS}/eureka/
+  
+  
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: admin
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
+---
