--- a/BackEnd/habit-service/src/main/resources/bootstrap.yml
+++ b/BackEnd/habit-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: habit-service
   profiles:
-    active: ${PROFILES}, test
+    active: ${PROFILES}
   cloud:
     config:
       discovery:
