--- a/BackEnd/habit-service/src/main/resources/bootstrap.yml
+++ b/BackEnd/habit-service/src/main/resources/bootstrap.yml
@@ -24,22 +24,22 @@ eureka:
   
   
 
----
-spring:
-  config:
-    activate:
-      on-profile: test
+# ---
+# spring:
+#   config:
+#     activate:
+#       on-profile: test
 
-  h2:
-    console:
-      enabled: true
-      path: /h2
-  datasource:
-    url: jdbc:h2:mem:mydb
-    username: sa
-    password: admin
-    driverClassName: org.h2.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+#   h2:
+#     console:
+#       enabled: true
+#       path: /h2
+#   datasource:
+#     url: jdbc:h2:mem:mydb
+#     username: sa
+#     password: admin
+#     driverClassName: org.h2.Driver
+#   jpa:
+#     database-platform: org.hibernate.dialect.H2Dialect
 
----
+# ---
