--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -29,6 +29,7 @@
 		<module>config-service</module>
 		<module>gateway-service</module>
 		<module>habit-service</module>
+		<module>notification-service</module>
 	</modules>
 
 	<dependencies>
