add progress servvice and fix H2 error

--- a/BackEnd/config-service/src/main/resources/bootstrap.yml
+++ b/BackEnd/config-service/src/main/resources/bootstrap.yml
@@ -22,6 +22,7 @@ spring:
             - gateway-service/
             - habit-service/
             - notification-service/
+            - progress-service/
         bootstrap: true
       allow-override: true
       override-none: false
