--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -1,34 +1,3 @@
-# version: '3.2'
-# services:
-#   prometheus:
-#     image: prom/prometheus:latest
-#     container_name: prometheus
-#     ports:
-#     - 9090:9090
-#     command:
-#     - --config.file=/etc/prometheus/prometheus.yml
-#     volumes:
-#     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-#     depends_on:
-#     - cadvisor
-#   cadvisor:
-#     image: gcr.io/cadvisor/cadvisor:latest
-#     container_name: cadvisor
-#     ports:
-#     - 8080:8080
-#     volumes:
-#     - /:/rootfs:ro
-#     - /var/run:/var/run:rw
-#     - /sys:/sys:ro
-#     - /var/lib/docker/:/var/lib/docker:ro
-#     depends_on:
-#     - redis
-#   redis:
-#     image: redis:latest
-#     container_name: redis
-#     ports:
-#     - 6379:6379
-
 name: Habit-App-Backend
 
 services:
@@ -44,7 +13,24 @@ services:
       - mysql-data:/var/lib/mysql  # Persist MySQL data
     networks:
       - habit-app
-  
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - 9190:9190
+    volumes:
+      - ./configuration/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "9191:9191"
+    restart: unless-stopped
+    volumes:
+      - ./configuration/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+
   registry-service:
     hostname: localhost
     build:
