--- a/BackEnd/configuration/grafana/provisioning/datasources/datasource.yaml
+++ b/BackEnd/configuration/grafana/provisioning/datasources/datasource.yaml
@@ -4,5 +4,5 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9190
+    url: http://77.37.86.136:9090
     isDefault: true
