--- a/BackEnd/configuration/prometheus/prometheus.yml
+++ b/BackEnd/configuration/prometheus/prometheus.yml
@@ -5,29 +5,29 @@ scrape_configs:
   - job_name: 'registry-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['77.37.86.136:8000']
 
   - job_name: 'config-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['config-service:8001']
+      - targets: ['77.37.86.136:8001']
 
   - job_name: 'gateway-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['gateway-service:8002']
+      - targets: ['77.37.86.136:8002']
 
   - job_name: 'emailing-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['emailing-service:8013']
+      - targets: ['77.37.86.136:8013']
 
   - job_name: 'profile-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['profile-service:8012']
+      - targets: ['77.37.86.136:8012']
 
   - job_name: 'authentication-service'
     scrape_interval: 15s
     static_configs:
-      - targets: ['authentication-service:8011']
+      - targets: ['77.37.86.136:8011']
