--- a/Mobile/habit_app/web/manifest.json
+++ b/Mobile/habit_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "habit_app",
-    "short_name": "habit_app",
+    "name": "habitmobile",
+    "short_name": "habitmobile",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
