--- a/Mobile/habit_app/android/app/build.gradle
+++ b/Mobile/habit_app/android/app/build.gradle
@@ -6,8 +6,8 @@ plugins {
 }
 
 android {
-    namespace = "com.example.habit_app"
-    compileSdk = flutter.compileSdkVersion
+    namespace = "com.example.habitmobile"
+    compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.habit_app"
+        applicationId = "com.example.habitmobile"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
