--- a/Mobile/habit_app/pubspec.yaml
+++ b/Mobile/habit_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: habit_app
+name: habitmobile
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,6 +35,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  dynamic_color: ^1.7.0
+  shared_preferences: ^2.3.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  flutter_local_notifications: ^18.0.1
+  flutter_timezone: ^4.0.0
+  device_info_plus: ^11.2.0
+  percent_indicator: ^4.2.4
+  fl_chart: ^0.69.2
+  get: ^4.6.5
+  flutter_svg: ^2.0.16
+  font_awesome_flutter: ^10.8.0
+  flutter_annual_task: ^0.2.0
+  flutter_heatmap_calendar: ^1.0.5
+  introduction_screen: ^3.1.14
+  path_provider_android: ^2.2.15
+
 
 dev_dependencies:
   flutter_test:
