--- a/Mobile/habit_app/windows/runner/Runner.rc
+++ b/Mobile/habit_app/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "habit_app" "\0"
+            VALUE "FileDescription", "habitmobile" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "habit_app" "\0"
+            VALUE "InternalName", "habitmobile" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "habit_app.exe" "\0"
-            VALUE "ProductName", "habit_app" "\0"
+            VALUE "OriginalFilename", "habitmobile.exe" "\0"
+            VALUE "ProductName", "habitmobile" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
